APF-903: Fixed issue where navigation buttons are not visible fully in IE6

--- a/web/jsf/src/main/webapp/styles/myfaces.css
+++ b/web/jsf/src/main/webapp/styles/myfaces.css
@@ -6,8 +6,13 @@
     font-family: verdana, geneva, arial, helvetica, sans-serif;
     font-size: 12px;
     color: #000000;
-    margin-top: -20px;
-    float: right;
+}
+
+ul.scrollerTable, table.scroller {
+	padding: 0;
+	margin: 0;
+	float: right;
+	margin-top: -5px;
 }
 
 .scroller img { border: 1px solid #999 }
